syntax = "proto3";
option java_multiple_files = true;
import "google/protobuf/empty.proto";
package sep3datalayer.grpc.protobuf;
option csharp_namespace = "sep3client.center";

message CreatingCenter {
  string name = 1;
  string location = 2;
}

message CenterGrpc {
  int32 id = 1;
  string name = 2;
  string location = 3;
}

message CenterList {
  repeated CenterGrpc center = 1;
}

service CenterService {
  rpc CreateCenter(CreatingCenter) returns (CenterGrpc);
  rpc GetCenters(google.protobuf.Empty) returns (CenterList);
}